# flutter-remote-display

./: .gitignore  .gitmodules  README.md
flutter_remote_display/: CHANGELOG.md  README.md  pubspec.yaml
flutter_remote_display/lib/: flutter_remote_display.dart
flutter_remote_display/lib/src/: bluetooth_display.dart  display.dart  encoding.dart  protocol.dart  remote_view.dart
flutter_remote_display/test/: flutter_remote_display_test.dart
flutterino_esp32/: CMakeLists.txt  platformio.ini
flutterino_esp32/main/: CMakeLists.txt  flutter_remote_display.c  flutter_remote_display.h  focaltech_touch.cpp  focaltech_touch.h  main.cpp
flutterino_esp32/src/: main.cpp
flutterino_flutter/: README.md  pubspec.yaml
flutterino_flutter/android/app/: build.gradle
flutterino_flutter/android/app/src/main/: AndroidManifest.xml
flutterino_flutter/android/app/src/main/kotlin/com/example/flutterino_flutter/: MainActivity.kt
flutterino_flutter/ios/Runner/: Info.plist
flutterino_flutter/ios/Runner.xcodeproj/: project.pbxproj
flutterino_flutter/lib/: main.dart
flutterino_flutter/linux/: CMakeLists.txt  my_application.cc
flutterino_flutter/macos/Runner.xcodeproj/: project.pbxproj
flutterino_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutterino_flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutterino_flutter/test/: widget_test.dart
flutterino_flutter/web/: index.html  manifest.json
flutterino_flutter/windows/: CMakeLists.txt
flutterino_flutter/windows/runner/: Runner.rc  main.cpp
